WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59054
WebKit2: Unconfirmed inline input session persists after reload
https://bugs.webkit.org/show_bug.cgi?id=59054
Summary
WebKit2: Unconfirmed inline input session persists after reload
Alexey Proskuryakov
Reported
2011-04-20 18:02:20 PDT
We don't inform input methods when we abandon inline input, so they keep thinking that we have one. Steps to reproduce: 1. Enable Kotoeri Hiragana IM (or any other one that uses inline input). 2. Open www.baidu.com (or any other site with forms or contenteditable). 3. Type anything, don't confirm the session. 4. Press Cmd+R. 5. Type more. Results: text typed into the old page re-appears on the new one. We should be calling -[NSTextInputContext discardMarkedText] at appropriate moments. <
rdar://problem/9291086
>
Attachments
proposed fix
(16.05 KB, patch)
2011-04-20 18:19 PDT
,
Alexey Proskuryakov
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2011-04-20 18:19:59 PDT
Created
attachment 90464
[details]
proposed fix
Maciej Stachowiak
Comment 2
2011-04-20 21:53:03 PDT
Comment on
attachment 90464
[details]
proposed fix View in context:
https://bugs.webkit.org/attachment.cgi?id=90464&action=review
r=me If either of the FIXMEs is a really bug, please file a follow-up.
> Source/WebKit2/UIProcess/WebPageProxy.cpp:1545 > + // FIXME: didCommitLoadForFrame comes too late when restoring a page from b/f cache, making us disable secure event mode in password fields. > + // FIXME: A load going on in one frame shouldn't affect typing in sibling frames.
Do these FIXMEs represent real bugs that can occur in practice?
Alexey Proskuryakov
Comment 3
2011-04-21 11:29:47 PDT
Yes - filed bugs for those. Committed <
http://trac.webkit.org/changeset/84526
>.
WebKit Review Bot
Comment 4
2011-04-21 11:34:06 PDT
http://trac.webkit.org/changeset/84526
might have broken EFL Linux Release (Build)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug