Source/WebKit2/UIProcess/API/mac/WKViewInternal.h
@@ -40,6 +40,7 @@ namespace WebKit {
     class DrawingAreaProxy;
     class FindIndicator;
     class LayerTreeContext;
+    struct EditorState;
 }
 
 @class WKFullScreenWindowController;
@@ -74,6 +75,8 @@ namespace WebKit {
 - (void)_countStringMatchesInCustomRepresentation:(NSString *)string withFindOptions:(WebKit::FindOptions)options maxMatchCount:(NSUInteger)count;
 - (void)_setDragImage:(NSImage *)image at:(NSPoint)clientPoint linkDrag:(BOOL)linkDrag;
 - (void)_updateSecureInputState;
+- (void)_updateTextInputStateIncludingSecureInputState:(BOOL)updateSecureInputState;
+- (void)_resetTextInputState;
 
 - (void)_setDrawingAreaSize:(NSSize)size;
 
